--- a/style.css
+++ b/style.css
@@ -1,5 +1,30 @@
+* {
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+  color: black;
+}
+a:active {
+  color: blue;
+}
+
+a:visited {
+  color: black;
+  text-decoration: none;
+}
 body {
-  margin: 0;s
+  margin: 0;
+}
+
+h3 {
+}
+
+input {
+  display: block;
+  width: 500px;
+  height: 60px;
+  margin: auto;
 }
 
 #home {
@@ -48,7 +73,4 @@ body {
   cursor: pointer;
   border: 1px solid #cecece;
   background-color: #dfdfdf;
-}
-
-#login {
 }
