--- a/css/swearing.css
+++ b/css/swearing.css
@@ -89,7 +89,7 @@
 .swearingView__background {
   border: 1px solid #65ffba;
   width: 580px;
-  height: 600px;
+  height: 650px;
   margin: auto;
   background-color: #afffee;
   background-image: linear-gradient(to bottom, #afffee, white);
@@ -123,11 +123,22 @@
 .swearingView__content {
   background-color: white;
   width: 100%;
-  height: 90%;
+  height: 85%;
   border-radius: 20px;
   text-align: left;
   padding: 10px;
 }
 .swearingView__content p {
   margin: 0;
+}
+
+.miniButton {
+  border: 1px solid #65ffba;
+  color: white;
+  background-color: #65ffba;
+  width: 50px;
+  height: 25px;
+  display: inline-block;
+  border-radius: 10px;
+  margin: -2px;
 }
