--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,14 @@ body {
 .home__avatar {
   border: 5px solid transparent;
   margin: 5px;
-
   height: 250px;
   width: 250px;
   border-radius: 50%;
+  transition: transform 0.3s linear;
 }
 
 .home__avatar:hover {
+  transform: rotate(40deg);
   background-image: linear-gradient(#444444, #444444),
     linear-gradient(to top, #fbfcb9be, #ffcdf3aa, #65d3ffaa);
   background-origin: border-box;
