--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 * {
   box-sizing: border-box;
+  
 }
-
+html,body{
+  height:100%;
+  margin:0;
+}
 :root{
   /* color */
   --color-light-grey: #7c7979;
@@ -43,6 +47,7 @@ ul {
   justify-content: space-between;
   border-bottom: 2px solid var(--color-light-grey);
   align-items: center;
+  height:15%;
 }
 
 .navbar__logo{
@@ -124,7 +129,35 @@ ul {
 .navbar__menu:hover .navbar__menu__gallery {
   display: block;
 }
+/* side info */
+.sideMenu {
+  border-right:1px solid var(--color-light-grey);
+  height:85%;
+  z-index:1;
+  position:fixed;
+  padding: 20px 0;
+  display:flex;
+  flex-direction:column-reverse;
+  justify-content:space-between;
+  align-items:center;
+  width:40px;
+  transition: width 0.5s;
+}
 
+.sideMenu__bottom > a{
+  display:none;
+}
+
+.sideMenu__button__close{
+  display:none;
+}
+
+.sideMenu__info{
+  display:none;
+}
+
+
+/* home */
 #home {
   position: relative;
   top: 100px;
