사이드메뉴 수정

--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 * {
   box-sizing: border-box;
-  
 }
-html,body{
-  height:100%;
-  margin:0;
+html,
+body {
+  height: 100%;
+  margin: 0;
 }
-:root{
+:root {
   /* color */
   --color-light-grey: #7c7979;
 
@@ -37,89 +37,84 @@ body {
 ul {
   list-style: none;
   padding: 0;
-  margin:0;
+  margin: 0;
 }
 
 /* navbar*/
 
 #navbar {
-  display:flex;
+  display: flex;
   justify-content: space-between;
   border-bottom: 2px solid var(--color-light-grey);
   align-items: center;
-  height:15%;
+  height: 15%;
 }
 
-.navbar__logo{
-  display:flex;
+.navbar__logo {
+  display: flex;
   align-items: center;
-  font-size:var(--font-medium);
-  color:red;
+  font-size: var(--font-medium);
+  color: red;
 }
 
-.navbar__logo a{
-  color:var(--color-light-grey);
+.navbar__logo a {
+  color: var(--color-light-grey);
 }
 
-@keyframes logoAnimation{
-  from{
-    transform:rotateY(360deg);
+@keyframes logoAnimation {
+  from {
+    transform: rotateY(360deg);
   }
-    
-  
 }
 
-.navbar__logo img{
-  border-radius:50%;
+.navbar__logo img {
+  border-radius: 50%;
   animation-name: logoAnimation;
-  animation-duration:3s;
-  animation-iteration-count:infinite;
-  animation-timing-function:linear;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
-.navbar__logo h3{
-  color:blue;
+.navbar__logo h3 {
+  color: blue;
 }
 
 .navbar__menu {
   display: flex;
-  margin-right:10px;
+  margin-right: 10px;
 }
 
 .navbar__menu li {
   position: relative;
-  width:100px;
-  height:34px;
-  text-align:center;
-  font-size:var(--font-regular);
-  padding:5px;
+  width: 100px;
+  height: 34px;
+  text-align: center;
+  font-size: var(--font-regular);
+  padding: 5px;
 }
 
-.navbar__menu li a{
-  
+.navbar__menu li a {
 }
 
-.navbar__menu li:hover{
-  border:1px solid black;
+.navbar__menu li:hover {
+  border: 1px solid black;
 }
 
 .navbar__menu__gallery {
-  list-style:none;
-  style:none;
-  margin:0;
-  padding:0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
   position: absolute;
   display: block;
 }
 
-
-.navbar__menu__gallery li{
-  left:-6px;
-  top:5px;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  background-color:white;
+.navbar__menu__gallery li {
+  left: -6px;
+  top: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
 }
 
 .navbar__menu li .navbar__menu__gallery {
@@ -131,31 +126,35 @@ ul {
 }
 /* side info */
 .sideMenu {
-  border-right:1px solid var(--color-light-grey);
-  height:85%;
-  z-index:1;
-  position:fixed;
+  border-right: 1px solid var(--color-light-grey);
+  height: 85%;
+  z-index: 1;
+  position: fixed;
   padding: 20px 0;
-  display:flex;
-  flex-direction:column-reverse;
-  justify-content:space-between;
-  align-items:center;
-  width:40px;
-  transition: width 0.5s;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-between;
+  align-items: center;
+  width: 40px;
+  transition: width 1s;
 }
 
-.sideMenu__bottom > a{
-  display:none;
+.sideMenu__info {
+  display: none;
 }
 
-.sideMenu__button__close{
-  display:none;
+.sideMenu__bottom > a {
+  display: none;
 }
 
-.sideMenu__info{
-  display:none;
+.sideMenu__button__close {
+  display: none;
+  cursor: pointer;
 }
 
+.sideMenu__button__on {
+  cursor: pointer;
+}
 
 /* home */
 #home {
